fix style to text-align center  view mobile

--- a/src/app/dapper_modules/Hero_XCAPITAL/xcapital_hero.component.scss
+++ b/src/app/dapper_modules/Hero_XCAPITAL/xcapital_hero.component.scss
@@ -268,6 +268,7 @@
     height: 100%;
   }
   .intro {
+    text-align: center;
     width: 100%;
     height: auto;
     padding: 16px 15px;
