--- a/src/app/dapper_modules/Products_XCAPITAL/xcapital_products.component.scss
+++ b/src/app/dapper_modules/Products_XCAPITAL/xcapital_products.component.scss
@@ -121,6 +121,7 @@ h2 {
     gap: 28px;
   }
   h2 {
+    text-align: center;
     font-size: 35px;
     line-height: 42px;
   }
